# molt-gic

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: artifact-types.md  autonomy-loop.md  autopacket-controller.md  autopacket-human-review-contract.md  cli.md  dashboard.md  dispatch-packets.md  openclaw-install-guide.md  openclaw-plugin-gateway.md  product-spec.md  provider-adapters.md  release.md  trace-mining.md  v1-packets.md  v1-pilot-report.md  v1-roadmap.md  v1-spec.md  v1-verifier-plan.md
examples/brief-summarizer/: PROMPT.md  golden.jsonl
examples/humanizer-zh/: SKILL.md  golden.jsonl
examples/molt-gic-autopacket/: SKILL.md  golden.jsonl
examples/route-triage/: ROUTE.md  golden.jsonl
openclaw-extension/: README.md  index.ts  openclaw.plugin.json  package.json
src/molt_gic/: cli.py  core.py  provider.py
tests/: test_artifact_expansion.py  test_autopacket_openclaw_digest.py  test_cli_flow.py  test_core.py  test_dashboard.py  test_gateway_live.py  test_network_provider.py  test_packets_full.py  test_plugin_bridge.py  test_plugin_no_init.py  test_provider.py  test_release.py  test_trace_mining.py
tools/: autopacket_openclaw_digest.py  release_dry_run.py  smoke.py  smoke_v1.py
