[project]
name = "molt-gic"
version = "0.1.0"
description = "Review-first agent skill evolution lab with governed GIC diagnostics"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "CK Wang"}]
dependencies = []

[project.scripts]
molt-gic = "molt_gic.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.0"]
